Closed Bug 1375969 Opened 7 years ago Closed 7 years ago

stylo: site issue: native video has a white transparent layer as if it was paused

Categories

(Core :: CSS Parsing and Computation, defect, P1)

56 Branch
x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: jan, Assigned: emilio)

References

(Blocks 1 open bug)

Details

(Keywords: nightly-community)

Attachments

(7 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:56.0) Gecko/20100101 Firefox/56.0
Build ID: 20170623115718

Steps to reproduce:

1. Open this video, you will notice it: https://i.4cdn.org/wsg/1493771772577.webm

2. If you click on play on the bottom-left, the play button + white transparent layer over the video don't get away: https://de.xhamster.com/movies/4082357/loud_sex_noises_in_a_public_library.html You can fix this one by resizing the window (make it smaller).
Has STR: --- → yes
OS: Unspecified → Linux
Hardware: Unspecified → x86_64
https://9gag.com/gag/aVMzYNM > rightclick > show video. You will notice the difference without any doubt.
This is due to the lack of dynamic change handling in XBL stuff. TYLin, do you know what's the status on that? It's presumably not too hard (we just need to look at the right InvalidationMap), I can look into it if you want.
Flags: needinfo?(tlin)
Blocks: 1290276
I haven't done anything for the dynamic change handling in XBL yet. If you already have an idea to fix this, please don't hesitate to look into it. Thank you!
Flags: needinfo?(tlin)
Assignee: nobody → emilio+bugs
Priority: -- → P1
Comment on attachment 8881648 [details]
style: Refactor XBL rule matching to add another API to iterate the Stylists.

https://reviewboard.mozilla.org/r/152814/#review157950

Looks good to me. Thanks!

BTW, is there any coding style guide for servo? The style you used looks very different from the rest of the file.
Attachment #8881648 - Flags: review?(tlin) → review+
Comment on attachment 8881648 [details]
style: Refactor XBL rule matching to add another API to iterate the Stylists.

https://reviewboard.mozilla.org/r/152814/#review157950

Well, we used to do the visual indentation for arguments, etc. Now I'm trying to write pretty much all new code in the RFC style (https://github.com/rust-lang-nursery/fmt-rfcs) which is supposed to become the "official" style for rust code.
Attachment #8881650 - Flags: review?(cam)
Comment on attachment 8881649 [details]
style: Factor out computation for a given InvalidationMap.

https://reviewboard.mozilla.org/r/152816/#review158066
Attachment #8881649 - Flags: review?(cam) → review+
Comment on attachment 8881650 [details]
style: Look at XBL stylists to collect dependencies too.

https://reviewboard.mozilla.org/r/152818/#review158068
Attachment #8881650 - Flags: review?(cam) → review+
Comment on attachment 8881651 [details]
Bug 1375969: Fix MightHave{State,Attribute}Dependency for XBL.

https://reviewboard.mozilla.org/r/152820/#review158070
Attachment #8881651 - Flags: review?(cam) → review+
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/d39cf29c7a5c
Fix MightHave{State,Attribute}Dependency for XBL. r=heycam
https://hg.mozilla.org/mozilla-central/rev/d39cf29c7a5c
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Partially fixed in today's 20170630100234 @ Debian Testing x64 (Radeon RX480).

https://de.xhamster.com/movies/4082357/loud_sex_noises_in_a_public_library.html
Play this 4:3 video, make it fullscreen.

See screenshot:
With servo, we have a white background on the left and right and some grey at the bottom.
Without servo, we have a black background.
(In reply to Darkspirit from comment #16)
Sorry, forgotten: The "white background" in the fullscreen may be the background color of the website.
(In reply to Darkspirit from comment #16)
Created bug 1377446 for this.

Everything what was described in comment #0 is fixed.
Status: RESOLVED → VERIFIED
See Also: → 1377446
(In reply to Hiroyuki Ikezoe (:hiro) from bug 1378064comment #25)
> The only way I can think of to avoid the panic is we allow restyle hints
> other than animation's in  Servo_ResolveStyle().
> https://treeherder.mozilla.org/#/jobs?repo=try&revision=ffdb95ba304b6cbd71ad5db91ae695ce68c055dd

I saw this bug partially reappearing in that try build and only on the lefthand website of attachment 8880920 [details]: If I click into the video to play it, the play button on the bottom left doesn't change and the video still has a white transparent layer over it.
And I can't reliably reproduce it. :(

Yesterday I was very insecure if I couldn't trust my eyes or if I've made something wrong, but while testing bug 1377739 comment 8 and other websites I saw this - randomly - reppearing bug exaclty as broken as mentioned above in the real Nightly release. But it seems that this is only if a native video player is included in a website, like the xhamster url from comment 16.
You need to log in before you can comment on or make changes to this bug.