Bug 1375969: Fix MightHave{State,Attribute}Dependency for XBL. r=heycam

MozReview-Commit-ID: 8I29pMHq4uf